--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
-body {
-  font-family: sans-serif;
+tbody {
+  font-family: Verdana, Arial, sans-serif;
+}
+
+td {
+  padding: 6px;
+  border-bottom: 1px solid grey;
+}
+
+th {
+  background-color: #b7d0ff;
+  font-weight: bold;
+  padding: 12px 0px 12px 6px;
+  border-top: 2px solid gray;
+}
+table {
+  border-collapse: collapse;
+  font-size: 16px;
+  text-align: left;
 }
