--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-tbody {
+body {
   font-family: Verdana, Arial, sans-serif;
 }
 
@@ -34,12 +34,4 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
   background-color: #ffffff;
-}
-
-.over45 {
-  background-color: #abffbd;
-}
-
-.under25 {
-  background-color: #ff9e9e;
 }
